# yh-hh

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: mvp.yml  web-admin-image.yml
app/: __init__.py  admin_api.py  auth.py  cache.py  config.py  db.py  embedding.py  events.py  image_generation.py  knowledge.py  knowledge_import.py  knowledge_map.py  llm.py  main.py  migrations.py  models.py  onebot.py  repository.py  router.py  scheduler.py  schemas.py  skills.py  web_search.py
deploy/lagrange/: appsettings.example.json
docs/: MVP本地完成状态.md  MVP规格.md  MVP验收清单.md  MVP验收证据矩阵.md  QQ机器人系统设计方案.md  一期产品蓝图.md  一期完成定义证据清单.md  一期开发状态.md  二期能力池.md  运维说明.md
scripts/: backup.sh  backup_restore_drill.py  check_all.py  deploy_mvp.sh  local_smoke.py  mvp_acceptance.py  onebot_simulate.py  phase_one_audit.py  preflight_check.py  prepare_lagrange_config.py  restore_postgres.sh  smoke_check.py
tests/: conftest.py  test_admin_api.py  test_backup_restore_drill.py  test_cache.py  test_deployment_config.py  test_embedding.py  test_events.py  test_image_generation.py  test_knowledge.py  test_knowledge_import.py  test_knowledge_map.py  test_lagrange_config.py  test_migrations.py  test_mvp_acceptance.py  test_onebot.py  test_phase_one_audit.py  test_preflight.py  test_router.py  test_scheduler.py  test_smoke_check.py  test_web_search.py
web-admin/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
web-admin/src/: App.vue  api.ts  auth.ts  main.ts  router.ts  style.css
web-admin/src/views/: DashboardView.vue  GroupsView.vue  KeywordRulesView.vue  KnowledgeView.vue  LlmSettingsView.vue  LoginView.vue  LogsView.vue  MemoriesView.vue  (+2 more)
