[project]
name = "qqbot"
version = "0.1.0"
description = "MVP QQ group bot core with OneBot v11 reverse WebSocket and admin API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.8",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.6",
]

[project.scripts]
qqbot = "app.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

